# corro

./: .gitignore  CHANGELOG.txt  COMMON_KEYBINDINGS.txt  Cargo.toml  DESIGN.md  KEYBINDINGS.md  README.md  TODO.md  TODO.txt  run.sh
.github/workflows/: release.yml
balance-core/: Cargo.toml
balance-core/src/: lib.rs
docs/: corro.cast
docs/test/: main.corro  zerosum.corro
docs/tests/: align.corro  colwidth.corro  main.corro  subtotal-tiny-ascii.txt  subtotal-tiny-tsv.tsv  subtotal-tiny.corro  traditional.corro  zerosum.corro  zerosum2.corro
scripts/: movie_demo.txt  movie_runner.go
src/: addr.rs  balance.rs  celladdr.rs  export.rs  lib.rs  main.rs  ods.rs
src/agg/: mod.rs
src/formula/: functions.rs  mod.rs  number.rs
src/grid/: mod.rs
src/io/: mod.rs
src/ops/: mod.rs
src/ui/: mod.rs
