[workspace]
members = ["balance-core"]

[package]
name = "corro"
version = "0.5.0"
edition = "2021"
default-run = "corro"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
notify = "7"
thiserror = "2"
zip = { version = "0.6", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
quick-xml = "0.37"
balance-core = { path = "balance-core" }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.balance-core]
opt-level = 2
